--- a/SDMS/package.json
+++ b/SDMS/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "index.mjs" : "nodemon ./src/index.mjs"
+    "start" : "nodemon ./src/index.mjs"
   },
   "keywords": [
     "123"
